structmeta-tests/tests/compile_fail/struct_meta/duplicate_named_arguments_with_rest.stderr
error: parameter `value` speficied more than once
 --> $DIR/duplicate_named_arguments_with_rest.rs:1:67
  |
1 | #[structmeta_tests::attr_required_and_rest_name_value(value = 10, value = 10)]
  |                                                                   ^^^^^
